<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">
        
        <TableRow>
            <TextView 
                android:id="@+id/courseCode"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_course_code"/>
            <EditText
                android:id="@+id/editBatchCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>
            <requestFocus />
        </TableRow>
        
        <TableRow>
            <TextView 
                android:id="@+id/course"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_course"/>
            <EditText
                android:id="@+id/editCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
        </TableRow>
        
        <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_start_date"/>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                        android:onClick="showDatePicker" 
                    android:src="@drawable/datepicker"/>
                    
                    <TextView android:id="@+id/textStartDate" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:paddingRight="10dp"
                        android:text="@string/label_show_date">
                </TextView>
            </LinearLayout>
        </TableRow>
        
         <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_start_date"/>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton 
                    android:layout_width="wrap_content" 
                    android:layout_height="wrap_content"
                        android:onClick="showTimePicker" 
                    android:src="@drawable/datepicker"/>
                    
                    <TextView android:id="@+id/startTime" 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:paddingRight="10dp"
                        android:text="@string/label_show_time">
                </TextView>
            </LinearLayout>
        </TableRow>
        
         <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_number_of_class"/>
            <EditText
                android:id="@+id/editClasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </TableRow>
        
          <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_class_per_week"/>
            <EditText
                android:id="@+id/editClassPerWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </TableRow>
        
          <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_class_period"/>
            <EditText
                android:id="@+id/editClassPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </TableRow>
        
         <TableRow>
            <TextView 
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/label_remark"/>
            <EditText
                android:id="@+id/editRemark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
        <TableRow>
            <Button 
                android:id="@+id/addBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdd"/>
        </TableRow>
        
    </TableLayout>

</ScrollView>
